<resources>

    <string name="app_name">The Panel</string>
    <string name="hello_world">Voll geil!</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="title_activity_panel_controller">Das Panel</string>
    
    <string name="label_butch">Zur Seite, Butch</string>
    <string name="label_was">Sag noch einmal</string>
    <string name="label_was_jetzt">Was jetzt?</string>
    <string name="label_was_ansteht">Ich sag dir</string>
    
    <string name="label_dasist">Das ist das</string>
    <string name="label_ehm">Das ist das</string>
    <string name="label_annee">Annee, ne</string>
    <string name="label_sonicht">So nicht</string>
    
    <string name="label_fail">Gescheitert</string>
    <string name="label_delate">Delate</string>
    
    <string name="label_wie_geil">Wie geil</string>
    <string name="label_jeopardy">Jeopardy</string>
    <string name="label_bieker">Beaker</string>
    <string name="label_kahn">Kahn</string>
    <string name="label_alarm">Alarm</string>

</resources>